@@ -583,6 +583,7 @@ Petr Sobotka (Pietro)
 Stéphane Gimenez (gim)
 Mark de Wever (Mordante/SkeletonCrew)
 Josef Reidinger (qk)
+Pauli Nieminen (coren/suokko)
 "
 [/about]
 
