@@ -863,7 +863,7 @@ void connect::start_game()
 	network::send_data(lock);
 
 	// Re-sends the whole level
-	update_and_send_diff();
+	update_and_send_diff(true);
 
 	// Build the gamestate object after updating the level
 	level_to_gamestate(level_, state_);
@@ -1286,6 +1286,18 @@ void connect::load_game()
 		level_["mp_countdown_turn_bonus"] = lexical_cast_default<std::string>(params_.mp_countdown_turn_bonus, "35");
 		level_["mp_countdown_reservoir_time"] = lexical_cast_default<std::string>(params_.mp_countdown_reservoir_time, "330");
 		level_["mp_countdown_action_bonus"] = lexical_cast_default<std::string>(params_.mp_countdown_action_bonus, "13");
+		
+		if (params_.random_start_time)
+		{
+			if (!gamestatus::is_start_ToD(level_["random_start_time"]))
+			{
+				level_["random_start_time"] = "yes";
+			}
+		}
+		else
+		{
+			level_["random_start_time"] = "no";
+		}
 
 
 
@@ -1333,10 +1345,18 @@ void connect::update_level()
 	}
 }
 
-void connect::update_and_send_diff()
+void connect::update_and_send_diff(bool update_time_of_day)
 {
 	config old_level = level_;
 	update_level();
+	
+	if (update_time_of_day)
+	{
+		// Set random start ToD 
+		gamestatus game_status(level_,atoi(level_["turns"].c_str()),&state_);
+
+	}
+	
 	config diff;
 	diff.add_child("scenario_diff",level_.get_diff(old_level));
 	network::send_data(diff);
