@@ -82,6 +82,7 @@ Version 1.3-svn:
    * add a friend list in MP lobby, they will display a special icon in lobby,
      and you can be warned when they join the lobby even when not receiving
      lobby joins
+   * added option to have random time of day in begin of multiplayer game
  * WML engine
    * added prerecruit event that takes place after the unit is created but
      before it is displayed.
@@ -128,6 +129,7 @@ Version 1.3-svn:
    * the filtered unit can be accessed in SUF using $_filtered_unit
    * the primary unit can be accessed in filter using $_primary_unit
    * the secondary unit can be accessed in filter using $_secondary_unit
+   * added support for random_start_time in [scenario] (feature request #8024)
    * gender-specific forms for trait names are now possible.
  * misc:
    * --validcache runtime switch to force assumption that cache is valid
